<resources>
    <string name="app_name">SpareFood_App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_plus">Plus</string>
    <string name="title_new_entry">New Entry</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_image_description">My Image</string>
    <string name="secondary_text">Distance</string>
    <string name="toggle_drawer">Toggle Drawer</string>
    <string name="distance_german">Entfernung</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="primarytext">Dish name</string>
    <string name="meal_name_hint">Name des Gerichtes</string>
    <string name="meal_description_hint">Beschreibung</string>
    <string name="refresh_error">Refreshing Failed!</string>
    <string name="settings_menu_profil_title">Profil</string>
    <string name="settings_menu_einstellungen_title">Einstellungen</string>
    <string name="settings_menu_rechtliches_title">Rechtliches</string>
    <string name="title_chat">Chat</string>
</resources>