<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.thb.sparefood_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.thb.sparefood_app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_plus"
        android:name="de.thb.sparefood_app.ui.plus.PlusFragment"
        android:label="@string/title_plus"
        tools:layout="@layout/fragment_plus" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="de.thb.sparefood_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_new_entry"
        android:name="de.thb.sparefood_app.ui.new_entry.NewEntryFragment"
        android:label="@string/title_new_entry"
        tools:layout="@layout/fragment_new_entry" />
</navigation>